instruments/AIOUSB/DLL/AIOUSB.dpr


  , DACOutputOpen                                   , DACOutputOpen                          name '_DACOutputOpen'                            , VBDACOutputOpen
  , DACOutputClose                                  , DACOutputClose                         name '_DACOutputClose'                           , VBDACOutputClose
  , DACOutputSetCount                               , DACOutputSetCount                      name '_DACOutputSetCount'                        , VBDACOutputSetCount
  , DACOutputFrame                                  , DACOutputFrame                         name '_DACOutputFrame'                           , VBDACOutputFrame
  , DACOutputAbort                                  , DACOutputAbort                         name '_DACOutputAbort'                           , VBDACOutputAbort
  , DACOutputStatus                                 , DACOutputStatus                        name '_DACOutputStatus'                          , VBDACOutputStatus

  , CTR_StartOutputFreq                             , CTR_StartOutputFreq                    name '_CTR_StartOutputFreq'                      , VBCTR_StartOutputFreq

  , CTR_8254Read                                    , CTR_8254Read                           name '_CTR_8254Read'                             , VBCTR_8254Read
  , CTR_8254ReadModeLoad                            , CTR_8254ReadModeLoad                   name '_CTR_8254ReadModeLoad'                     , VBCTR_8254ReadModeLoad
  , CTR_8254ModeLoad                                , CTR_8254ModeLoad                       name '_CTR_8254ModeLoad'                         , VBCTR_8254ModeLoad
  , CTR_8254Mode                                    , CTR_8254Mode                           name '_CTR_8254Mode'                             , VBCTR_8254Mode

  , DIO_ReadAll                                     , DIO_ReadAll                            name '_DIO_ReadAll'                              , VBDIO_ReadAll
  , DIO_Read8                                       , DIO_Read8                              name '_DIO_Read8'                                , VBDIO_Read8
  , DIO_WriteAll                                    , DIO_WriteAll                           name '_DIO_WriteAll'                             , VBDIO_WriteAll
  , DIO_Write8                                      , DIO_Write8                             name '_DIO_Write8'                               , VBDIO_Write8
  , DIO_Write1                                      , DIO_Write1                             name '_DIO_Write1'                               , VBDIO_Write1
  , DIO_Configure                                   , DIO_Configure                          name '_DIO_Configure'                            , VBDIO_Configure

  , QueryDeviceInfo                                 , QueryDeviceInfo                        name '_QueryDeviceInfo'                          , VBQueryDeviceInfo
  , GetDevices                                      , GetDevices                             name '_GetDevices'                               , VBGetDevices
  ;



begin
  LoadDriverLinks;
end.
